--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-OWNER=1892771262
-CHANNEL_ID=-1002194076115
+OWNER=640235279
+CHANNEL_ID=-1003660027473
+TOKEN=8271104795:AAHuSg2_zP-0Ihb2cT2EXQogCZ1OeB7xUEk
+API_ID=31288459
+API_HASH=88d86771314b156ef0744679f453f517
